core: misc polishing and javadocs
Change-Id: I684272fcae845b82bab68c776b15848e0e426224
Reviewed-on: http://review.couchbase.org/111586
Reviewed-by: Michael Nitschinger <michael.nitschinger@couchbase.com>
Tested-by: Michael Nitschinger <michael.nitschinger@couchbase.com>